[package]
name = "lin_inf"
version = "0.1.0"
authors = ["Alex Rice <alexrice999@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
rayon = "1.5.0"
serde_json = "1.0"
serde = {version = "1.0.118", features = ["derive"]}
indicatif = {version = "0.15.0", features = ["rayon"]}
clap = "3.0.0-beta.2"

[dev-dependencies]
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
lazy_static = "1.4.0"
